per http://intranet.picsauditing.com/display/it/How+to+Tune+Eclipse