@@ -1,9 +1,10 @@
 // Add this to the end of your server VM arguments
 // Run...Open Run Dialog...Arguments.VMArguments
 // Then restart Tomcat
-	-Dpics.autoLogin=941
+	-XX:MaxPermSize=256m
 	-Dpics.debug=1
-
+	-Dpics.autoLogin=941
+	
 // Replace this from your Servers / Tomcat / server.xml
 			<Context docBase="picsWeb2" path="/picsWeb2" reloadable="true" source="org.eclipse.jst.j2ee.server:picsWeb2"/></Host>
 // With this
